// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderer/components/notifications/NotificationRow.tsx should render itself & its children - group by date 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="border-b border-atlassify-notifications hover:bg-atlassify-notifications"
        id="138661096"
      >
        <div
          class="css-am7nxq"
        >
          <div
            class="css-1v6wdk"
          >
            <div
              class="css-1ufm3oo"
            >
              <div
                class="css-k5cxwk"
                id="notification-avatar"
              >
                <div
                  class="css-5zfxu5"
                >
                  <div
                    role="presentation"
                  >
                    <div
                      aria-labelledby="uid2"
                      class="css-130dd7j"
                      role="img"
                    >
                      <span
                        class="css-1ummshu"
                        style="--avatar-bg-color: var(--ds-surface-overlay, #FFFFFF); --avatar-box-shadow: 0 0 0 2px var(--ds-surface-overlay, #FFFFFF);"
                      >
                        <img
                          alt=""
                          aria-hidden="true"
                          class="css-13ep12v"
                          data-ssr-placeholder-ignored="true"
                          data-vc="avatar-image"
                          src="https://avatar-management--avatars.us-west-2.prod.public.atl-paas.net/123"
                          style="border-radius: 50%;"
                        />
                      </span>
                      <span
                        hidden=""
                        id="uid2"
                      >
                        atlassify-app
                      </span>
                    </div>
                  </div>
                  <div
                    role="presentation"
                  >
                    <span
                      aria-label="Direct notification"
                      class="css-kxjlgc"
                      role="img"
                      style="color: currentColor;"
                    >
                      <svg
                        class="css-1t4wpzr"
                        fill="none"
                        role="presentation"
                        viewBox="0 0 16 16"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M2.22 1.22A.75.75 0 0 1 2.75 1H14a.75.75 0 0 1 .6 1.2l-2.662 3.55L14.6 9.3a.75.75 0 0 1-.6 1.2H3.5V15H2V1.75a.75.75 0 0 1 .22-.53M3.5 9h9l-2.1-2.8a.75.75 0 0 1 0-.9l2.1-2.8h-9z"
                          fill="currentcolor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="css-8kdxbn"
              >
                <div
                  class="css-k5cxwk"
                  data-testid="notification-details"
                  id="notification-details"
                >
                  <div
                    class="cursor-pointer"
                  >
                    <div
                      class="css-2mvdbp"
                    >
                      <div
                        class="css-k5cxwk"
                        id="notification-title"
                      >
                        <span
                          class="css-b0hel9"
                        >
                          #103: chore(deps): update dependency eslint
                        </span>
                          
                        <em
                          class="css-1ot9q9i"
                        >
                          3 years ago
                        </em>
                      </div>
                      <div
                        class="css-k5cxwk"
                        id="notification-metadata"
                      >
                        <div
                          class="css-k5cxwk"
                          id="notification-entity"
                        >
                          <div
                            class="css-1w1rt7h"
                          >
                            <div
                              aria-labelledby="uid4"
                              class="css-130dd7j"
                              role="img"
                            >
                              <span
                                class="css-1iefllh"
                                style="--avatar-bg-color: var(--ds-surface-overlay, #FFFFFF); --avatar-box-shadow: 0 0 0 2px var(--ds-surface-overlay, #FFFFFF);"
                              >
                                <img
                                  alt=""
                                  aria-hidden="true"
                                  class="css-13ep12v"
                                  data-ssr-placeholder-ignored="true"
                                  data-vc="avatar-image"
                                  src="https://bbc-object-storage--frontbucket.us-east-1.prod.public.atl-paas.net/80907f89f58b/img/favicon.ico"
                                  style="border-radius: 2px;"
                                />
                              </span>
                              <span
                                hidden=""
                                id="uid4"
                              >
                                #103: chore(deps): update dependency eslint
                              </span>
                            </div>
                            <span
                              class="css-lym9kh"
                            >
                              #103: chore(deps): update dependency eslint
                            </span>
                          </div>
                        </div>
                        <div
                          class="css-1yqbixt"
                          id="notification-product"
                        >
                          <div
                            class="css-f86pb"
                          >
                            <span
                              aria-label="Bitbucket"
                              class="css-5vjqu0"
                              role="img"
                              style="--logo-color: inherit; --logo-fill: currentColor;"
                            >
                              <svg
                                aria-hidden="true"
                                fill="none"
                                focusable="false"
                                height="32"
                                viewBox="0 0 32 32"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                
      
                                <path
                                  d="m25.586 15.819-1.618 9.885c-.106.598-.528.95-1.126.95H9.122c-.598 0-1.02-.352-1.126-.95L5.146 8.08c-.105-.598.212-.985.775-.985h20.123c.562 0 .88.387.773.985l-.773 4.644c-.106.668-.493.95-1.126.95H12.816c-.176 0-.282.105-.246.316l.95 5.84c.035.14.14.246.281.246h4.362c.141 0 .246-.105.282-.246l.668-4.222c.07-.527.422-.738.915-.738h4.75c.703 0 .914.351.808.95"
                                  fill="#1868DB"
                                />
                                
    
                              </svg>
                            </span>
                            <span
                              class="css-lym9kh"
                            >
                              myorg/notifications-test
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="css-k5cxwk"
              id="notification-actions"
            >
              <div
                role="presentation"
              >
                <button
                  class="css-1vyxgfe"
                  data-testid="notification-mark-as-read"
                  type="button"
                >
                  <span
                    class="css-1spmf3f"
                  >
                    <svg
                      aria-label="Unread Indicator"
                      height="24"
                      role="img"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                      xmlns:xlink="http://www.w3.org/1999/xlink"
                    >
                      <circle
                        cx="50%"
                        cy="50%"
                        fill="var(--ds-icon-brand)"
                        r="4"
                      />
                    </svg>
                    <span
                      class="css-b5o75w"
                    >
                      Mark as read
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="border-b border-atlassify-notifications hover:bg-atlassify-notifications"
      id="138661096"
    >
      <div
        class="css-am7nxq"
      >
        <div
          class="css-1v6wdk"
        >
          <div
            class="css-1ufm3oo"
          >
            <div
              class="css-k5cxwk"
              id="notification-avatar"
            >
              <div
                class="css-5zfxu5"
              >
                <div
                  role="presentation"
                >
                  <div
                    aria-labelledby="uid2"
                    class="css-130dd7j"
                    role="img"
                  >
                    <span
                      class="css-1ummshu"
                      style="--avatar-bg-color: var(--ds-surface-overlay, #FFFFFF); --avatar-box-shadow: 0 0 0 2px var(--ds-surface-overlay, #FFFFFF);"
                    >
                      <img
                        alt=""
                        aria-hidden="true"
                        class="css-13ep12v"
                        data-ssr-placeholder-ignored="true"
                        data-vc="avatar-image"
                        src="https://avatar-management--avatars.us-west-2.prod.public.atl-paas.net/123"
                        style="border-radius: 50%;"
                      />
                    </span>
                    <span
                      hidden=""
                      id="uid2"
                    >
                      atlassify-app
                    </span>
                  </div>
                </div>
                <div
                  role="presentation"
                >
                  <span
                    aria-label="Direct notification"
                    class="css-kxjlgc"
                    role="img"
                    style="color: currentColor;"
                  >
                    <svg
                      class="css-1t4wpzr"
                      fill="none"
                      role="presentation"
                      viewBox="0 0 16 16"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M2.22 1.22A.75.75 0 0 1 2.75 1H14a.75.75 0 0 1 .6 1.2l-2.662 3.55L14.6 9.3a.75.75 0 0 1-.6 1.2H3.5V15H2V1.75a.75.75 0 0 1 .22-.53M3.5 9h9l-2.1-2.8a.75.75 0 0 1 0-.9l2.1-2.8h-9z"
                        fill="currentcolor"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </div>
            <div
              class="css-8kdxbn"
            >
              <div
                class="css-k5cxwk"
                data-testid="notification-details"
                id="notification-details"
              >
                <div
                  class="cursor-pointer"
                >
                  <div
                    class="css-2mvdbp"
                  >
                    <div
                      class="css-k5cxwk"
                      id="notification-title"
                    >
                      <span
                        class="css-b0hel9"
                      >
                        #103: chore(deps): update dependency eslint
                      </span>
                        
                      <em
                        class="css-1ot9q9i"
                      >
                        3 years ago
                      </em>
                    </div>
                    <div
                      class="css-k5cxwk"
                      id="notification-metadata"
                    >
                      <div
                        class="css-k5cxwk"
                        id="notification-entity"
                      >
                        <div
                          class="css-1w1rt7h"
                        >
                          <div
                            aria-labelledby="uid4"
                            class="css-130dd7j"
                            role="img"
                          >
                            <span
                              class="css-1iefllh"
                              style="--avatar-bg-color: var(--ds-surface-overlay, #FFFFFF); --avatar-box-shadow: 0 0 0 2px var(--ds-surface-overlay, #FFFFFF);"
                            >
                              <img
                                alt=""
                                aria-hidden="true"
                                class="css-13ep12v"
                                data-ssr-placeholder-ignored="true"
                                data-vc="avatar-image"
                                src="https://bbc-object-storage--frontbucket.us-east-1.prod.public.atl-paas.net/80907f89f58b/img/favicon.ico"
                                style="border-radius: 2px;"
                              />
                            </span>
                            <span
                              hidden=""
                              id="uid4"
                            >
                              #103: chore(deps): update dependency eslint
                            </span>
                          </div>
                          <span
                            class="css-lym9kh"
                          >
                            #103: chore(deps): update dependency eslint
                          </span>
                        </div>
                      </div>
                      <div
                        class="css-1yqbixt"
                        id="notification-product"
                      >
                        <div
                          class="css-f86pb"
                        >
                          <span
                            aria-label="Bitbucket"
                            class="css-5vjqu0"
                            role="img"
                            style="--logo-color: inherit; --logo-fill: currentColor;"
                          >
                            <svg
                              aria-hidden="true"
                              fill="none"
                              focusable="false"
                              height="32"
                              viewBox="0 0 32 32"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              
      
                              <path
                                d="m25.586 15.819-1.618 9.885c-.106.598-.528.95-1.126.95H9.122c-.598 0-1.02-.352-1.126-.95L5.146 8.08c-.105-.598.212-.985.775-.985h20.123c.562 0 .88.387.773.985l-.773 4.644c-.106.668-.493.95-1.126.95H12.816c-.176 0-.282.105-.246.316l.95 5.84c.035.14.14.246.281.246h4.362c.141 0 .246-.105.282-.246l.668-4.222c.07-.527.422-.738.915-.738h4.75c.703 0 .914.351.808.95"
                                fill="#1868DB"
                              />
                              
    
                            </svg>
                          </span>
                          <span
                            class="css-lym9kh"
                          >
                            myorg/notifications-test
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="css-k5cxwk"
            id="notification-actions"
          >
            <div
              role="presentation"
            >
              <button
                class="css-1vyxgfe"
                data-testid="notification-mark-as-read"
                type="button"
              >
                <span
                  class="css-1spmf3f"
                >
                  <svg
                    aria-label="Unread Indicator"
                    height="24"
                    role="img"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                    xmlns:xlink="http://www.w3.org/1999/xlink"
                  >
                    <circle
                      cx="50%"
                      cy="50%"
                      fill="var(--ds-icon-brand)"
                      r="4"
                    />
                  </svg>
                  <span
                    class="css-b5o75w"
                  >
                    Mark as read
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`renderer/components/notifications/NotificationRow.tsx should render itself & its children - group by products 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="border-b border-atlassify-notifications hover:bg-atlassify-notifications"
        id="138661096"
      >
        <div
          class="css-am7nxq"
        >
          <div
            class="css-1v6wdk"
          >
            <div
              class="css-1ufm3oo"
            >
              <div
                class="css-k5cxwk"
                id="notification-avatar"
              >
                <div
                  class="css-5zfxu5"
                >
                  <div
                    role="presentation"
                  >
                    <div
                      aria-labelledby="uid8"
                      class="css-130dd7j"
                      role="img"
                    >
                      <span
                        class="css-1ummshu"
                        style="--avatar-bg-color: var(--ds-surface-overlay, #FFFFFF); --avatar-box-shadow: 0 0 0 2px var(--ds-surface-overlay, #FFFFFF);"
                      >
                        <img
                          alt=""
                          aria-hidden="true"
                          class="css-13ep12v"
                          data-ssr-placeholder-ignored="true"
                          data-vc="avatar-image"
                          src="https://avatar-management--avatars.us-west-2.prod.public.atl-paas.net/123"
                          style="border-radius: 50%;"
                        />
                      </span>
                      <span
                        hidden=""
                        id="uid8"
                      >
                        atlassify-app
                      </span>
                    </div>
                  </div>
                  <div
                    role="presentation"
                  >
                    <span
                      aria-label="Direct notification"
                      class="css-kxjlgc"
                      role="img"
                      style="color: currentColor;"
                    >
                      <svg
                        class="css-1t4wpzr"
                        fill="none"
                        role="presentation"
                        viewBox="0 0 16 16"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M2.22 1.22A.75.75 0 0 1 2.75 1H14a.75.75 0 0 1 .6 1.2l-2.662 3.55L14.6 9.3a.75.75 0 0 1-.6 1.2H3.5V15H2V1.75a.75.75 0 0 1 .22-.53M3.5 9h9l-2.1-2.8a.75.75 0 0 1 0-.9l2.1-2.8h-9z"
                          fill="currentcolor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="css-8kdxbn"
              >
                <div
                  class="css-k5cxwk"
                  data-testid="notification-details"
                  id="notification-details"
                >
                  <div
                    class="cursor-pointer"
                  >
                    <div
                      class="css-2mvdbp"
                    >
                      <div
                        class="css-k5cxwk"
                        id="notification-title"
                      >
                        <span
                          class="css-b0hel9"
                        >
                          #103: chore(deps): update dependency eslint
                        </span>
                          
                        <em
                          class="css-1ot9q9i"
                        >
                          3 years ago
                        </em>
                      </div>
                      <div
                        class="css-k5cxwk"
                        id="notification-metadata"
                      >
                        <div
                          class="css-k5cxwk"
                          id="notification-entity"
                        >
                          <div
                            class="css-1w1rt7h"
                          >
                            <div
                              aria-labelledby="uid10"
                              class="css-130dd7j"
                              role="img"
                            >
                              <span
                                class="css-1iefllh"
                                style="--avatar-bg-color: var(--ds-surface-overlay, #FFFFFF); --avatar-box-shadow: 0 0 0 2px var(--ds-surface-overlay, #FFFFFF);"
                              >
                                <img
                                  alt=""
                                  aria-hidden="true"
                                  class="css-13ep12v"
                                  data-ssr-placeholder-ignored="true"
                                  data-vc="avatar-image"
                                  src="https://bbc-object-storage--frontbucket.us-east-1.prod.public.atl-paas.net/80907f89f58b/img/favicon.ico"
                                  style="border-radius: 2px;"
                                />
                              </span>
                              <span
                                hidden=""
                                id="uid10"
                              >
                                #103: chore(deps): update dependency eslint
                              </span>
                            </div>
                            <span
                              class="css-lym9kh"
                            >
                              #103: chore(deps): update dependency eslint
                            </span>
                          </div>
                        </div>
                        <div
                          class="css-1yqbixt"
                          id="notification-product"
                        >
                          <div
                            class="css-f86pb"
                          >
                            <span
                              aria-label="Bitbucket"
                              class="css-5vjqu0"
                              role="img"
                              style="--logo-color: inherit; --logo-fill: currentColor;"
                            >
                              <svg
                                aria-hidden="true"
                                fill="none"
                                focusable="false"
                                height="32"
                                viewBox="0 0 32 32"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                
      
                                <path
                                  d="m25.586 15.819-1.618 9.885c-.106.598-.528.95-1.126.95H9.122c-.598 0-1.02-.352-1.126-.95L5.146 8.08c-.105-.598.212-.985.775-.985h20.123c.562 0 .88.387.773.985l-.773 4.644c-.106.668-.493.95-1.126.95H12.816c-.176 0-.282.105-.246.316l.95 5.84c.035.14.14.246.281.246h4.362c.141 0 .246-.105.282-.246l.668-4.222c.07-.527.422-.738.915-.738h4.75c.703 0 .914.351.808.95"
                                  fill="#1868DB"
                                />
                                
    
                              </svg>
                            </span>
                            <span
                              class="css-lym9kh"
                            >
                              myorg/notifications-test
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="css-k5cxwk"
              id="notification-actions"
            >
              <div
                role="presentation"
              >
                <button
                  class="css-1vyxgfe"
                  data-testid="notification-mark-as-read"
                  type="button"
                >
                  <span
                    class="css-1spmf3f"
                  >
                    <svg
                      aria-label="Unread Indicator"
                      height="24"
                      role="img"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                      xmlns:xlink="http://www.w3.org/1999/xlink"
                    >
                      <circle
                        cx="50%"
                        cy="50%"
                        fill="var(--ds-icon-brand)"
                        r="4"
                      />
                    </svg>
                    <span
                      class="css-b5o75w"
                    >
                      Mark as read
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="border-b border-atlassify-notifications hover:bg-atlassify-notifications"
      id="138661096"
    >
      <div
        class="css-am7nxq"
      >
        <div
          class="css-1v6wdk"
        >
          <div
            class="css-1ufm3oo"
          >
            <div
              class="css-k5cxwk"
              id="notification-avatar"
            >
              <div
                class="css-5zfxu5"
              >
                <div
                  role="presentation"
                >
                  <div
                    aria-labelledby="uid8"
                    class="css-130dd7j"
                    role="img"
                  >
                    <span
                      class="css-1ummshu"
                      style="--avatar-bg-color: var(--ds-surface-overlay, #FFFFFF); --avatar-box-shadow: 0 0 0 2px var(--ds-surface-overlay, #FFFFFF);"
                    >
                      <img
                        alt=""
                        aria-hidden="true"
                        class="css-13ep12v"
                        data-ssr-placeholder-ignored="true"
                        data-vc="avatar-image"
                        src="https://avatar-management--avatars.us-west-2.prod.public.atl-paas.net/123"
                        style="border-radius: 50%;"
                      />
                    </span>
                    <span
                      hidden=""
                      id="uid8"
                    >
                      atlassify-app
                    </span>
                  </div>
                </div>
                <div
                  role="presentation"
                >
                  <span
                    aria-label="Direct notification"
                    class="css-kxjlgc"
                    role="img"
                    style="color: currentColor;"
                  >
                    <svg
                      class="css-1t4wpzr"
                      fill="none"
                      role="presentation"
                      viewBox="0 0 16 16"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M2.22 1.22A.75.75 0 0 1 2.75 1H14a.75.75 0 0 1 .6 1.2l-2.662 3.55L14.6 9.3a.75.75 0 0 1-.6 1.2H3.5V15H2V1.75a.75.75 0 0 1 .22-.53M3.5 9h9l-2.1-2.8a.75.75 0 0 1 0-.9l2.1-2.8h-9z"
                        fill="currentcolor"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </div>
            <div
              class="css-8kdxbn"
            >
              <div
                class="css-k5cxwk"
                data-testid="notification-details"
                id="notification-details"
              >
                <div
                  class="cursor-pointer"
                >
                  <div
                    class="css-2mvdbp"
                  >
                    <div
                      class="css-k5cxwk"
                      id="notification-title"
                    >
                      <span
                        class="css-b0hel9"
                      >
                        #103: chore(deps): update dependency eslint
                      </span>
                        
                      <em
                        class="css-1ot9q9i"
                      >
                        3 years ago
                      </em>
                    </div>
                    <div
                      class="css-k5cxwk"
                      id="notification-metadata"
                    >
                      <div
                        class="css-k5cxwk"
                        id="notification-entity"
                      >
                        <div
                          class="css-1w1rt7h"
                        >
                          <div
                            aria-labelledby="uid10"
                            class="css-130dd7j"
                            role="img"
                          >
                            <span
                              class="css-1iefllh"
                              style="--avatar-bg-color: var(--ds-surface-overlay, #FFFFFF); --avatar-box-shadow: 0 0 0 2px var(--ds-surface-overlay, #FFFFFF);"
                            >
                              <img
                                alt=""
                                aria-hidden="true"
                                class="css-13ep12v"
                                data-ssr-placeholder-ignored="true"
                                data-vc="avatar-image"
                                src="https://bbc-object-storage--frontbucket.us-east-1.prod.public.atl-paas.net/80907f89f58b/img/favicon.ico"
                                style="border-radius: 2px;"
                              />
                            </span>
                            <span
                              hidden=""
                              id="uid10"
                            >
                              #103: chore(deps): update dependency eslint
                            </span>
                          </div>
                          <span
                            class="css-lym9kh"
                          >
                            #103: chore(deps): update dependency eslint
                          </span>
                        </div>
                      </div>
                      <div
                        class="css-1yqbixt"
                        id="notification-product"
                      >
                        <div
                          class="css-f86pb"
                        >
                          <span
                            aria-label="Bitbucket"
                            class="css-5vjqu0"
                            role="img"
                            style="--logo-color: inherit; --logo-fill: currentColor;"
                          >
                            <svg
                              aria-hidden="true"
                              fill="none"
                              focusable="false"
                              height="32"
                              viewBox="0 0 32 32"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              
      
                              <path
                                d="m25.586 15.819-1.618 9.885c-.106.598-.528.95-1.126.95H9.122c-.598 0-1.02-.352-1.126-.95L5.146 8.08c-.105-.598.212-.985.775-.985h20.123c.562 0 .88.387.773.985l-.773 4.644c-.106.668-.493.95-1.126.95H12.816c-.176 0-.282.105-.246.316l.95 5.84c.035.14.14.246.281.246h4.362c.141 0 .246-.105.282-.246l.668-4.222c.07-.527.422-.738.915-.738h4.75c.703 0 .914.351.808.95"
                                fill="#1868DB"
                              />
                              
    
                            </svg>
                          </span>
                          <span
                            class="css-lym9kh"
                          >
                            myorg/notifications-test
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="css-k5cxwk"
            id="notification-actions"
          >
            <div
              role="presentation"
            >
              <button
                class="css-1vyxgfe"
                data-testid="notification-mark-as-read"
                type="button"
              >
                <span
                  class="css-1spmf3f"
                >
                  <svg
                    aria-label="Unread Indicator"
                    height="24"
                    role="img"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                    xmlns:xlink="http://www.w3.org/1999/xlink"
                  >
                    <circle
                      cx="50%"
                      cy="50%"
                      fill="var(--ds-icon-brand)"
                      r="4"
                    />
                  </svg>
                  <span
                    class="css-b5o75w"
                  >
                    Mark as read
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
